--- a/index.css
+++ b/index.css
@@ -101,8 +101,8 @@ p {
    align-items: center;
 }
 .square {
-  height: 12px;
-  width: 12px;
+  height: 14px;
+  width: 14px;
   display: inline-block;
   border-radius: var(--border-radius);
   margin-right: 5px;
@@ -247,3 +247,39 @@ FILTER ITEMS
    height: 30px;
    width: 30px;
 }
+
+
+
+#range {
+   flex: 1;
+}
+
+#range-text {
+   width: 70px;
+   text-align: right;
+}
+
+.slider-container {
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+}
+
+.range {
+   -webkit-appearance: none;  /* Override default CSS styles */
+   appearance: none;
+   height: 4px; /* Specified height */
+   background: #d3d3d3; /* Grey background */
+   outline: none;
+   border-radius: var(--border-radius);
+}
+
+.range::-webkit-slider-thumb {
+   -webkit-appearance: none; /* Override default look */
+   appearance: none;
+   width: 13px; /* Set a specific slider handle width */
+   height: 13px; /* Slider handle height */
+   background: black; /* Green background */
+   cursor: pointer; 
+   border-radius: 50%;/* Cursor on hover */
+ }
