--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@
 	--shadow: 0px 1px 10px #D5D5D5;
    --border-radius: 3px;
    --light-background: #F4F4F4;
+   --font-size: 13px;
 }
 
 body,
@@ -12,7 +13,7 @@ html {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Arial, sans-serif;
-  font-size: 14px;
+  font-size: var(--font-size);
   color: grey;
 }
 
@@ -33,7 +34,7 @@ h2 {
 }
 
 p {
-  font-size: 14px;
+  font-size: var(--font-size);
   margin: var(--spacing) 0;
 }
 #map {
@@ -59,7 +60,7 @@ p {
 
 
 p {
-  font-size: 13px;
+  font-size: var(--font-size);
   color: grey;
 }
 
@@ -82,7 +83,7 @@ p {
   border-radius: 0;
   box-shadow: none;
   font-family: sans-serif;
-  font-size: 14px;
+  font-size: var(--font-size);
 }
 
 .key {
@@ -139,6 +140,20 @@ SEARCH CONTAINER
 	right: 0;
 	width: 300px;
 	z-index: 500000;
+}
+
+#search-field-container {
+   display: flex;
+   align-items: center;
+}
+
+#search-field-container img {
+   fill: lightgray;
+   padding: 0 0 0 10px;
+   height: 20px;
+   color: lightgray;
+   user-select: none;
+
 }
 
 
@@ -199,6 +214,14 @@ FILTER ITEMS
    cursor: pointer;
    position: relative;
    background: white;   
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+}
+
+.filters img {
+   transition: .3s all;
+   user-select: none;
 }
 .filter-items {
    display: none;
@@ -294,3 +317,86 @@ FILTER ITEMS
    cursor: pointer; 
    border-radius: 50%;/* Cursor on hover */
  }
+
+
+
+
+
+
+
+ /*
+
+ Radio buttons
+
+ */
+
+.radio-container-grid {
+   display: grid;
+   grid-template-columns: 1fr 1fr;
+}
+
+/* Radio Buttons */
+.radio-container {
+   display: block;
+   position: relative;
+   padding-left: 25px;
+   margin: 15px 0;
+   cursor: pointer;
+   /* font-size: 22px; */
+   user-select: none;
+   font-size: var(--font-size);
+}
+
+ /* Hide the browser's default radio button */
+.radio-container input {
+   position: absolute;
+   opacity: 0;
+   cursor: pointer;
+}
+ 
+ /* Create a custom radio button */
+.checkmark {
+   position: absolute;
+   top: 0;
+   left: 0;
+   height: 16px;
+   width: 16px;
+   background-color: var(--secondary-background);
+   border: 1px solid #ccc;
+   border-radius: 50%;
+   transition: .1s all ease-in-out;
+}
+ 
+ /* On mouse-over, add a grey background color */
+.radio-container:hover input ~ .checkmark {
+   /* background-color: #f5f5f5; */
+   /* border: 1px solid gray; */
+}
+ 
+ /* When the radio button is checked, add a blue background */
+.radio-container input:checked ~ .checkmark {
+   background-color: black;
+   border: 1px solid transparent;
+}
+ 
+ /* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+   content: "";
+   position: absolute;
+   display: none;
+}
+ 
+ /* Show the indicator (dot/circle) when checked */
+.radio-container input:checked ~ .checkmark:after {
+   display: block;
+}
+ 
+ /* Style the indicator (dot/circle) */
+.radio-container .checkmark:after {
+   top: 5px;
+   left: 5px;
+   width: 6px;
+   height: 6px;
+   border-radius: 50%;
+   background: white;
+}
