--- a/index.css
+++ b/index.css
@@ -198,13 +198,17 @@ FILTER ITEMS
 */
 
 .filter-container {
-   border-radius: var(--border-radius);
+   /* border-radius: var(--border-radius); */
    box-shadow: var(--shadow);
+   border-radius: 4px;
+   /* border: 1px solid black; */
+   /* box-sizing: border-box; */
 }
 
 .filters {
-   /* border-radius: var(--border-radius); */
+   /* border-radius: 10px; */
 	padding: 10px;
+   
 	color: grey;
 	width: 100%;
 	border: 0px;
@@ -217,6 +221,8 @@ FILTER ITEMS
    display: flex;
    align-items: center;
    justify-content: space-between;
+   border: 1px solid #F1F1F1;
+   border-radius: 4px;
 }
 
 .filters img {
@@ -230,7 +236,7 @@ FILTER ITEMS
    height: 200px; 
    box-sizing: border-box;
    box-shadow: var(--shadow);
-   
+   /* border: 1px solid black; */
    overflow-y: scroll;
 }
 
