--- a/index.css
+++ b/index.css
@@ -74,21 +74,30 @@ p {
 .custom .leaflet-popup-tip {
   display: none;
 }
+.leaflet-popup-content-wrapper {
+   padding: 10px;
+}
 .custom .leaflet-popup-content-wrapper {
   background: #fff;
-  border: 1.5px solid #d3d6d8;
-  padding: 20px;
-  color: black;
   padding: 0;
-  border-radius: 0;
-  box-shadow: none;
-  font-family: sans-serif;
-  font-size: var(--font-size);
+  margin: 0;
+  border-radius: var(--border-radius);
+  box-shadow: var(--shadow);
+  
+}
+.custom .leaflet-popup-content {
+   padding: var(--larger-spacing);
+   margin: 0;
+   font-family: -apple-system, BlinkMacSystemFont, Arial, sans-serif;
+   font-size: var(--font-size);
+   color: grey;
+   display: grid;
+   grid-template-columns: 80px 1fr;
+   
 }
 
 .key {
-  display: inline-block;
-  width: 80px;
+  color: black;
 }
 
 #clear {
@@ -228,6 +237,7 @@ FILTER ITEMS
 .filters img {
    transition: .3s all;
    user-select: none;
+   height: 20px;
 }
 .filter-items {
    /* display: none; */
